[package]
name = "swerve-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revlib = { git = "https://github.com/BlueZeeKing/robotrs" }
robotrs = { git = "https://github.com/BlueZeeKing/robotrs" }
anyhow = "1.0.75"
