[package]
name = "swerve-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revlib = { path = "../robotrs/revlib" }
robotrs = { path = "../robotrs/robotrs" }
utils = { path = "../robotrs/utils" }
anyhow = "1.0.75"
nalgebra = "0.32.4"
